# advent_of_code_2022

./: .prettierignore  .prettierrc.json  README.cpp.md  README.js.md  README.md  index.html  jest.config.ts  main.js  package-lock.json  package.json  tsconfig.json  tsconfig.orig.json
day01/: CMakeLists.txt  README.cpp.md  day01_part1.test.ts  day01_part1.ts
day01/src/: CMakeLists.txt  day01_part1.cpp
day01/web/: day01a.html  day01a.js  day01a.js.map  day01a.ts  day01a.ts.old  day01a_old.js.map
